# rust-next

./: .gitignore  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile  db.sqlite  diesel.toml
backend/migrations/2025-06-23-211118_create_documents/: up.sql
backend/src/: document_upload_analysis.rs  main.rs  schema.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: MuiThemeProvider.tsx  layout.tsx  page.tsx
