[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
actix-rt = "2"
actix-cors = "0.6"
actix-multipart = "0.6"
tokio = { version = "1", features = ["full"] }
pdf-extract = "0.7"
docx-rs = "0.4"
reqwest = { version = "0.11", features = ["json"] }
async-openai = "0.14"
futures-util = "0.3"
once_cell = "1.19"
diesel = { version = "2.1", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
actix-files = "0.6"
